# cpp_test

./: CMakeLists.txt  back_CMakeLists.txt  logging.yaml
commands/: gen_commands_manifest.py  sample_service.hpp
doc/: lifecycle.puml  lifecycle_subsystem.puml
host/: host_base.hpp  logging.yaml  main.cpp
host/composition/: subsystem_controller cpp  subsystem_controller.hpp  subsystem_loader.hpp  subsystem_manager.cpp  subsystem_manager.hpp
host/manifest/: subsystem_manifest_loader.hpp  system_manifest.hpp  system_manifest_loader.hpp  system_manifest_manager.cpp  system_manifest_manager.hpp
host/system_control/: system_control.cpp  system_control.hpp
shared/command/: command_def.hpp  command_dispacher.hpp  command_helper.hpp  command_manifest_loader.hpp  command_registry.hpp
shared/common/: base.h  helper.hpp  logging_def.hpp  macros.h  message.hpp  result.h  result_helper.hpp  thread_unit.cpp  thread_unit.hpp  worker.cpp  worker.hpp
shared/config/: system_config.hpp
shared/interfaces/: common_types.h  subsystem_abi.h  system_service.hpp  task_unit.hpp
shared/ioc/: base_component.hpp  base_factory.hpp  basic_container.cpp  component.hpp  component_collection.cpp  component_collection.hpp  container.cpp  container.hpp  device_container.cpp  device_scope.hpp  ioc.hpp  scoped_factory.hpp  service_provider.hpp  singleton_factory.hpp  singletonlazy_factory.hpp  transient_factory.hpp
shared/logging/: logger.cpp  logger.hpp  logger_backend.hpp  logger_console.hpp  logger_spdlog.cpp  logger_spdlog.hpp  logging.hpp  logging_def.hpp  sample.yaml
shared/messaging/: message_bus.hpp  message_helper.hpp  subscriber.hpp  zmq_message_bus.hpp  zmq_subscriber copy.hpp  zmq_subscriber.hpp
shared/system/ioc/: base_component.hpp  base_factory.hpp  basic_container.hpp  basis_typeinfo.hpp  component.hpp  component_collection.cpp  component_collection.hpp  device_container.hpp  ioc.hpp  scope.hpp  scoped_factory.hpp  service_provider.cpp  service_provider.hpp  singleton_factory.hpp  (+2 more)
shared/task/: async_pool.hpp  async_task.hpp  task_unit.hpp  thread_pool.hpp  thread_task.hpp  worker.cpp  worker.hpp
subsystems/sample/: sample_abi.cpp  sample_api.h  sample_command.yaml
tools/generator/: annotate_header_methods.py  gen_class.py  gen_command_fun.py  gen_command_fun.py.bak  gen_commands_manifest.py  gen_subsystem.sh  gen_subsystem_abi.py  sample_service.cpp  sample_service.hpp  sample_service.hpp.bak
tools/temp/: sample_abi.cpp  sample_service.hpp  subsystem_command.yaml
(+13 files in other folders)
